Fix the alignment in the four card layout

--- a/style.css
+++ b/style.css
@@ -64,8 +64,10 @@ header nav ul li{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   padding: 3rem;
+  align-items: center;
+  flex-grow: 1;
 }
 
 #four-layout .content{
@@ -73,6 +75,7 @@ header nav ul li{
   flex-direction: row;
   padding: 5rem;
   justify-content: space-evenly;
+  
 }
 #four-layout .content .box{
   background-color: #e5e7eb;
@@ -88,5 +91,16 @@ header nav ul li{
   width: 10rem;
   height: 10rem;
   border-radius: 1cap;
+ display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
 
+}
+
+.content .first-content, .second-content, .third-content, .fourth-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
